--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim"]
 	path = vim
 	url = git@github.com:alterGNU42/.vim.git
+[submodule "cmds/WLC"]
+	path = cmds/WLC
+	url = git@github.com:alterGNU/WikiLinkConvertor.git
